# DLearning

./: .gitignore  README.md  normalization.py
DiveInfoDL/: 3.11模型选择.ipynb  3.12权重衰减.ipynb  3.13dropout.ipynb  3.15Kaggle房价预测.ipynb  3.2线性回归.ipynb  3.3线性回归-2.ipynb  3.4softmax回归.md  3.5Fashion-mnist.ipynb  3.6softmax.ipynb  3.7 softmax-2.ipynb  3.8多层感知机-2.ipynb  3.8多层感知机.ipynb  4.1模型构建.ipynb  4.2模型参数.ipynb  5.10BatchNorm.ipynb  5.11ResNet.ipynb  5.12DenseNet.ipynb  5.1卷积网络.ipynb  5.5LeNet.ipynb  5.6AlexNet.ipynb  5.7VGG.ipynb  5.8NiN.ipynb  5.9GoogLeNet.ipynb  5卷积网络.ipynb  6.3LanguageModel.ipynb  6.4循环神经网络.ipynb  6.5rnn-2.ipynb  7.1优化.ipynb  7.2GradientDescent.ipynb  7.4Momentum.ipynb  7.5AdaGrad.ipynb  7.7rmstrop.ipynb  7.8AdaDelta.ipynb  7.9Adam.ipynb  chapter3.3.ipynb  d2lzh.py
data/: lumbar_data_20200617.csv
lumbar/: main.py  test.py
lumbar/core/: data_utils.py
lumbar/core/disease/: data_loader.py
lumbar/nn_tools/: __init__.py  torch_utils.py  utils.py
lumbar/test/: data_utils.py  visual.ipynb
yolo/: 2onnx.py  2onnx.sh  darknet.py  darknet53.py  demo.py  demo2.py  test.ipynb  utils.py
yolo/example/: AgeGenderRecongnizer.cc  AgeGenderRecongnizer.h  CMakeLists.txt  Yolov4TinyDetector.cc  Yolov4TinyDetector.h  main.cc  yolov3-mnn.cc  yolov4.cc
yolo/mnn/: YoloDetector.cc  YoloDetector.h  test.cc
